Add option to add minimum interval between text messages

--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ EVENT_ID="12345678"
 # Check interval in seconds
 CHECK_INTERVAL=300
 
+# Minimum interval between text messages in seconds (0 to disable)
+MIN_TEXT_INTERVAL=6000
+
 # Notifcation phone number (leave blank to disable)
 NOTIFY_NUMBER="+12345678901"
 
